mainframe-workers/src/parsers/grammar/ogl/OGLParser.py
# Generated from grammar/ogl/OGL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OGLParser ( Parser ):

    grammarFileName = "OGL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "DOT", "LPAREN", "RPAREN", "ABSOLUTE", 
                      "ACROSS", "ALL", "AUTO", "BALANCE", "BOLD", "BOTH", 
                      "BOTTOM", "BOTTOMLEFT", "BOTTOMRIGHT", "BOX", "CENTER", 
                      "CHAR", "CHARSET", "CODEPAGE", "COLOR", "COLUMN", 
                      "CONTROL", "CORNERLENGTH", "CPI", "DARK", "DASHED", 
                      "DDNAME", "DEFINE", "DIAGONAL", "DIAMETER", "DOTTED", 
                      "DRAWBOX", "DRAWRULE", "DOWN", "ENCODED", "ENDDEF", 
                      "ERROR", "FILETYPE", "FONT", "FONT38PP", "FONTDD", 
                      "GROUP", "HALF", "HEIGHT", "HEX", "IN", "JUSTIFY", 
                      "LARGE", "LASTNO", "LEFT", "LIGHT", "LINE", "LINESP", 
                      "LOCATION", "LPI", "MAX", "MM", "MEDIUM", "MIRROR", 
                      "MODERN", "NEGATIVE", "NOMIRROR", "NONEGATIVE", "NOSTORE", 
                      "NOSOSI", "NOSUMMARY", "NOUNDERLINE", "OFFSET", "ORIENT", 
                      "OVERLAY", "PATTERN", "PELS", "PLACE", "POINTS", "POSITION", 
                      "POSITIONING", "PSEG38PP", "REPEAT", "REPLACE", "RIGHT", 
                      "ROUNDED", "SCALE", "SCREEN", "SEGDD", "SEGID", "SEGMENT", 
                      "SETTEXT", "SETUNITS", "SHADE", "SIZE", "SMALL", "SOLID", 
                      "SOSI", "SOSI1", "SOSI2", "SPACED", "SQUARE", "STANDARD", 
                      "STORE", "SUMMARY", "TATE", "TEXTMARGIN", "TOP", "TOPLEFT", 
                      "TOPRIGHT", "UCOLOR", "UNDERLINE", "UP", "WARN", "WHOLE", 
                      "WITHTEXT", "XDARK", "XLIGHT", "STRINGLITERAL", "INTEGERLITERAL", 
                      "COMMENT", "NEWLINE", "WS", "IDENTIFIER" ]

    RULE_startRule = 0
    RULE_command = 1
    RULE_segmentCommand = 2
    RULE_segmentName = 3
    RULE_segmentDDName = 4
    RULE_segmentDDNameName = 5
    RULE_segmentFileType = 6
    RULE_placePatternCommand = 7
    RULE_patternColor = 8
    RULE_patternColorName = 9
    RULE_mirrorOption = 10
    RULE_negativeOption = 11
    RULE_patternShade = 12
    RULE_definepatternCommand = 13
    RULE_lineCoding = 14
    RULE_lineCodingPels = 15
    RULE_lineCodingEncoded = 16
    RULE_coded_line = 17
    RULE_patternName = 18
    RULE_settextCommand = 19
    RULE_settextFormat = 20
    RULE_settextFormatModern = 21
    RULE_settextFormatPlacement = 22
    RULE_settextFormatColumn = 23
    RULE_settextAlignment = 24
    RULE_settextAlignmentAuto = 25
    RULE_settextAlignmentSpaced = 26
    RULE_settextAlignmentValue = 27
    RULE_setunitsCommand = 28
    RULE_setunitsDefault = 29
    RULE_primaryDefault = 30
    RULE_secondaryDefault = 31
    RULE_setunitsLineSp = 32
    RULE_setunitsCornerLength = 33
    RULE_conrnerLengthValue = 34
    RULE_setunitsTextMargin = 35
    RULE_textMarginValue = 36
    RULE_setUnitsPositioning = 37
    RULE_positionValue = 38
    RULE_placeCommand = 39
    RULE_drawruleCommand = 40
    RULE_ruleDirection = 41
    RULE_ruleLength = 42
    RULE_ruleThickness = 43
    RULE_ruleType = 44
    RULE_ruleRepeated = 45
    RULE_ruleRepeatAcross = 46
    RULE_ruleRepetition = 47
    RULE_ruleRepeatLocation = 48
    RULE_ruleRepeatVerticalCoordinate = 49
    RULE_ruleRepeatHorizonalCoordinate = 50
    RULE_drawboxCommand = 51
    RULE_boxWidth = 52
    RULE_boxHeight = 53
    RULE_boxBorderThickness = 54
    RULE_boxBorderType = 55
    RULE_boxRounded = 56
    RULE_boxRoundedOption = 57
    RULE_boxDiagonal = 58
    RULE_boxDiagonalOption = 59
    RULE_boxRepeat = 60
    RULE_boxRepeatLocation = 61
    RULE_boxRepeatVerticalCoordinate = 62
    RULE_boxRepeatHorizonalCoordinate = 63
    RULE_boxRepeatAcrossDown = 64
    RULE_boxRepetition = 65
    RULE_boxRepeatSpaced = 66
    RULE_spacedValue = 67
    RULE_boxShade = 68
    RULE_box = 69
    RULE_shadeArea = 70
    RULE_shadePattern = 71
    RULE_shadeType = 72
    RULE_boxColor = 73
    RULE_boxColorName = 74
    RULE_boxWithtext = 75
    RULE_boxWithtextOrient = 76
    RULE_boxWithtextLineSpacing = 77
    RULE_line = 78
    RULE_line_part = 79
    RULE_text = 80
    RULE_lineSosiMode = 81
    RULE_lineUnderlying = 82
    RULE_lineTextType = 83
    RULE_boxWithtextFormat = 84
    RULE_boxWithtextFormatModern = 85
    RULE_boxWithtextFormatPlacement = 86
    RULE_boxWithtextFormatColumn = 87
    RULE_positionCommand = 88
    RULE_positionX = 89
    RULE_positionY = 90
    RULE_controlCommand = 91
    RULE_controlStorage = 92
    RULE_controlMessage = 93
    RULE_controlSummary = 94
    RULE_controlSosiOption = 95
    RULE_overlayCommand = 96
    RULE_overlayName = 97
    RULE_overlayWidth = 98
    RULE_overlayHeight = 99
    RULE_overlayHorizonalCoordinate = 100
    RULE_overlayVerticalCoordinate = 101
    RULE_orientCommand = 102
    RULE_orientRotatedDegree = 103
    RULE_fontCommand = 104
    RULE_fontCommandMVS = 105
    RULE_fontCommandVM = 106
    RULE_fontFileType = 107
    RULE_fileTypeName = 108
    RULE_fontWithMemID = 109
    RULE_fontWithCharSet = 110
    RULE_fontDDName = 111
    RULE_ddNameName = 112
    RULE_fontHeight = 113
    RULE_fontScale = 114
    RULE_fontColor = 115
    RULE_fontUColor = 116
    RULE_fontColorName = 117
    RULE_fontName = 118
    RULE_memId = 119
    RULE_charSetName = 120
    RULE_codePageName = 121
    RULE_defineGroupCommand = 122
    RULE_groupName = 123
    RULE_oglMeasurement = 124

    ruleNames =  [ "startRule", "command", "segmentCommand", "segmentName", 
                   "segmentDDName", "segmentDDNameName", "segmentFileType", 
                   "placePatternCommand", "patternColor", "patternColorName", 
                   "mirrorOption", "negativeOption", "patternShade", "definepatternCommand", 
                   "lineCoding", "lineCodingPels", "lineCodingEncoded", 
                   "coded_line", "patternName", "settextCommand", "settextFormat", 
                   "settextFormatModern", "settextFormatPlacement", "settextFormatColumn", 
                   "settextAlignment", "settextAlignmentAuto", "settextAlignmentSpaced", 
                   "settextAlignmentValue", "setunitsCommand", "setunitsDefault", 
                   "primaryDefault", "secondaryDefault", "setunitsLineSp", 
                   "setunitsCornerLength", "conrnerLengthValue", "setunitsTextMargin", 
                   "textMarginValue", "setUnitsPositioning", "positionValue", 
                   "placeCommand", "drawruleCommand", "ruleDirection", "ruleLength", 
                   "ruleThickness", "ruleType", "ruleRepeated", "ruleRepeatAcross", 
                   "ruleRepetition", "ruleRepeatLocation", "ruleRepeatVerticalCoordinate", 
                   "ruleRepeatHorizonalCoordinate", "drawboxCommand", "boxWidth", 
                   "boxHeight", "boxBorderThickness", "boxBorderType", "boxRounded", 
                   "boxRoundedOption", "boxDiagonal", "boxDiagonalOption", 
                   "boxRepeat", "boxRepeatLocation", "boxRepeatVerticalCoordinate", 
                   "boxRepeatHorizonalCoordinate", "boxRepeatAcrossDown", 
                   "boxRepetition", "boxRepeatSpaced", "spacedValue", "boxShade", 
                   "box", "shadeArea", "shadePattern", "shadeType", "boxColor", 
                   "boxColorName", "boxWithtext", "boxWithtextOrient", "boxWithtextLineSpacing", 
                   "line", "line_part", "text", "lineSosiMode", "lineUnderlying", 
                   "lineTextType", "boxWithtextFormat", "boxWithtextFormatModern", 
                   "boxWithtextFormatPlacement", "boxWithtextFormatColumn", 
                   "positionCommand", "positionX", "positionY", "controlCommand", 
                   "controlStorage", "controlMessage", "controlSummary", 
                   "controlSosiOption", "overlayCommand", "overlayName", 
                   "overlayWidth", "overlayHeight", "overlayHorizonalCoordinate", 
                   "overlayVerticalCoordinate", "orientCommand", "orientRotatedDegree", 
                   "fontCommand", "fontCommandMVS", "fontCommandVM", "fontFileType", 
                   "fileTypeName", "fontWithMemID", "fontWithCharSet", "fontDDName", 
                   "ddNameName", "fontHeight", "fontScale", "fontColor", 
                   "fontUColor", "fontColorName", "fontName", "memId", "charSetName", 
                   "codePageName", "defineGroupCommand", "groupName", "oglMeasurement" ]

    EOF = Token.EOF
    DOT=1
    LPAREN=2
    RPAREN=3
    ABSOLUTE=4
    ACROSS=5
    ALL=6
    AUTO=7
    BALANCE=8
    BOLD=9
    BOTH=10
    BOTTOM=11
    BOTTOMLEFT=12
    BOTTOMRIGHT=13
    BOX=14
    CENTER=15
    CHAR=16
    CHARSET=17
    CODEPAGE=18
    COLOR=19
    COLUMN=20
    CONTROL=21
    CORNERLENGTH=22
    CPI=23
    DARK=24
    DASHED=25
    DDNAME=26
    DEFINE=27
    DIAGONAL=28
    DIAMETER=29
    DOTTED=30
    DRAWBOX=31
    DRAWRULE=32
    DOWN=33
    ENCODED=34
    ENDDEF=35
    ERROR=36
    FILETYPE=37
    FONT=38
    FONT38PP=39
    FONTDD=40
    GROUP=41
    HALF=42
    HEIGHT=43
    HEX=44
    IN=45
    JUSTIFY=46
    LARGE=47
    LASTNO=48
    LEFT=49
    LIGHT=50
    LINE=51
    LINESP=52
    LOCATION=53
    LPI=54
    MAX=55
    MM=56
    MEDIUM=57
    MIRROR=58
    MODERN=59
    NEGATIVE=60
    NOMIRROR=61
    NONEGATIVE=62
    NOSTORE=63
    NOSOSI=64
    NOSUMMARY=65
    NOUNDERLINE=66
    OFFSET=67
    ORIENT=68
    OVERLAY=69
    PATTERN=70
    PELS=71
    PLACE=72
    POINTS=73
    POSITION=74
    POSITIONING=75
    PSEG38PP=76
    REPEAT=77
    REPLACE=78
    RIGHT=79
    ROUNDED=80
    SCALE=81
    SCREEN=82
    SEGDD=83
    SEGID=84
    SEGMENT=85
    SETTEXT=86
    SETUNITS=87
    SHADE=88
    SIZE=89
    SMALL=90
    SOLID=91
    SOSI=92
    SOSI1=93
    SOSI2=94
    SPACED=95
    SQUARE=96
    STANDARD=97
    STORE=98
    SUMMARY=99
    TATE=100
    TEXTMARGIN=101
    TOP=102
    TOPLEFT=103
    TOPRIGHT=104
    UCOLOR=105
    UNDERLINE=106
    UP=107
    WARN=108
    WHOLE=109
    WITHTEXT=110
    XDARK=111
    XLIGHT=112
    STRINGLITERAL=113
    INTEGERLITERAL=114
    COMMENT=115
    NEWLINE=116
    WS=117
    IDENTIFIER=118

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OGLParser.EOF, 0)

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OGLParser.CommandContext)
            else:
                return self.getTypedRuleContext(OGLParser.CommandContext,i)


        def getRuleIndex(self):
            return OGLParser.RULE_startRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartRule" ):
                listener.enterStartRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartRule" ):
                listener.exitStartRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartRule" ):
                return visitor.visitStartRule(self)
            else:
                return visitor.visitChildren(self)




    def startRule(self):

        localctx = OGLParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 253
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281456672768) != 0) or ((((_la - 68)) & ~0x3f) == 0 and ((1 << (_la - 68)) & 917587) != 0):
                self.state = 250
                self.command()
                self.state = 255
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 256
            self.match(OGLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def controlCommand(self):
            return self.getTypedRuleContext(OGLParser.ControlCommandContext,0)


        def overlayCommand(self):
            return self.getTypedRuleContext(OGLParser.OverlayCommandContext,0)


        def orientCommand(self):
            return self.getTypedRuleContext(OGLParser.OrientCommandContext,0)


        def fontCommand(self):
            return self.getTypedRuleContext(OGLParser.FontCommandContext,0)


        def defineGroupCommand(self):
            return self.getTypedRuleContext(OGLParser.DefineGroupCommandContext,0)


        def positionCommand(self):
            return self.getTypedRuleContext(OGLParser.PositionCommandContext,0)


        def drawboxCommand(self):
            return self.getTypedRuleContext(OGLParser.DrawboxCommandContext,0)


        def drawruleCommand(self):
            return self.getTypedRuleContext(OGLParser.DrawruleCommandContext,0)


        def placeCommand(self):
            return self.getTypedRuleContext(OGLParser.PlaceCommandContext,0)


        def setunitsCommand(self):
            return self.getTypedRuleContext(OGLParser.SetunitsCommandContext,0)


        def settextCommand(self):
            return self.getTypedRuleContext(OGLParser.SettextCommandContext,0)


        def definepatternCommand(self):
            return self.getTypedRuleContext(OGLParser.DefinepatternCommandContext,0)


        def placePatternCommand(self):
            return self.getTypedRuleContext(OGLParser.PlacePatternCommandContext,0)


        def segmentCommand(self):
            return self.getTypedRuleContext(OGLParser.SegmentCommandContext,0)


        def getRuleIndex(self):
            return OGLParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = OGLParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 272
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 258
                self.controlCommand()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 259
                self.overlayCommand()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 260
                self.orientCommand()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 261
                self.fontCommand()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 262
                self.defineGroupCommand()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 263
                self.positionCommand()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 264
                self.drawboxCommand()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 265
                self.drawruleCommand()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 266
                self.placeCommand()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 267
                self.setunitsCommand()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 268
                self.settextCommand()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 269
                self.definepatternCommand()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 270
                self.placePatternCommand()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 271
                self.segmentCommand()
                pass

